--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,7 +20,7 @@
 
     
 </head>
-<body class = "scroll-smooth	">
+<body class = "scroll-smooth" style = "overflow-x: hidden;">
 
 
 
@@ -314,13 +314,7 @@
   
     </div>
   </div>
-  <section>
-  </section>
   
-  
-
-
-
 
     {% comment %} END our motto section {% endcomment %}
 
@@ -502,7 +496,7 @@
               
           
               <!-- Mission Card -->
-                <div data-aos="zoom-in-left" data-aos-duration = "2000" style = "height: 60vh" class="bg-cover text-left p-6 bg-[url('{% static './images/ourmission.png' %}')] h-full flex items-center">
+                <div data-aos="zoom-in-left" data-aos-duration = "2000" style = "height: 60vh" class="bg-cover text-left p-6 bg-[url('{% static './images/ourmission2.png' %}')] h-full flex items-center">
 
                     <div class="lg:w-3/4 w-full">
                         <h2 class="lg:text-5xl text-4xl font-bold mb-2 flex items-center">
@@ -519,7 +513,7 @@
 
           {% comment %}  {% endcomment %}
               <!-- Vision Card -->
-              <div data-aos="zoom-in-right" data-aos-duration = "2000" style = "height: 60vh" class="bg-cover text-left border-0  md:border-l-4 md:border-[#9D2235] p-6 bg-[url('{% static './images/ourvision.png' %}')] h-full flex items-center">
+              <div data-aos="zoom-in-right" data-aos-duration = "2000" style = "height: 60vh" class="bg-cover text-left border-0  md:border-l-4 md:border-[#9D2235] p-6 bg-[url('{% static './images/ourvision1.png' %}')] h-full flex items-center">
 
                 <div class="lg:w-3/4 w-full">
                     <h2 class="lg:text-5xl text-4xl font-bold mb-2 flex items-center">
@@ -552,7 +546,7 @@
                 </div>
             </div>
             <div class="w-2/3 md:w-1/2 mx-auto my-10 md:my-0 md:mx-0 flex md:justify-end" data-aos="zoom-in-right" data-aos-duration = "2000">
-                <img src="{% static './images/diversity-img.png' %}" class="w-full h-[200px] md:h-[500px]">
+                <img src="{% static './images/diversityimg.JPG' %}" class="w-full h-[200px] md:h-[500px]">
             </div>
         </div>
 
@@ -573,24 +567,24 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-0 w-full  text-center ">
 
-                <div data-aos="zoom-in-up" data-aos-duration = "2000"  class="md:h-[60vh] h-[250px] bg-cover text-left p-6 bg-[url('{% static './images/mst.png' %}')] flex items-center">
+                <div data-aos="zoom-in-up" data-aos-duration = "2000"  class="md:h-[60vh] h-[250px] bg-cover text-left p-6 bg-[url('{% static './images/mst1.png' %}')] flex items-center">
                     <div class="lg:w-3/4 md:w-full">
                         <h2 class="lg:text-3xl md:text-2xl text-3xl font-bold mb-2 flex items-center text-white">
                             MATH, SCIENCE, TECHNOLOGY (MST)
                             
                         </h2>
-                        <p class="lg:text-xl md:text-lg  text-xl text-white font-noto-serif mt-5">Unlock the world of innovation with advanced coursework in mathematics, science, and technology. Perfect for students passionate about problem-solving, scientific discovery, and cutting-edge technology.
+                        <p class="lg:text-xl md:text-md  text-xl text-white font-noto-serif mt-5">Unlock the world of innovation with advanced coursework in mathematics, science, and technology. Perfect for students passionate about problem-solving, scientific discovery, and cutting-edge technology.
                         </p>
                     </div>
                 </div>
 
-                <div data-aos="zoom-in-up" data-aos-duration = "2000"  class="md:h-[60vh] h-[250px] bg-cover  md:border-l-4 md:border-[#9D2235] text-left p-6 bg-[url('{% static './images/hsu.png' %}')] flex items-center">
+                <div data-aos="zoom-in-up" data-aos-duration = "2000"  class="md:h-[60vh] h-[250px] bg-cover  md:border-l-4 md:border-[#9D2235] text-left p-6 bg-[url('{% static './images/highschool.png' %}')] flex items-center">
                     <div class="lg:w-3/4 md:w-full">
                         <h2 class="lg:text-3xl md:text-2xl text-3xl font-bold mb-2 flex items-center text-white">
                             HIGH SCHOOL UNIVERSITY (HSU)
                             
                         </h2>
-                        <p class="lg:text-xl md:text-lg text-xl text-white font-noto-serif mt-5">Pursue a rigorous academic experience that mirrors a college environment. With opportunities for dual credit and advanced placement, this program is ideal for students focused on academic excellence.
+                        <p class="lg:text-xl md:text-md text-xl text-white font-noto-serif mt-5">Pursue a rigorous academic experience that mirrors a college environment. With opportunities for dual credit and advanced placement, this program is ideal for students focused on academic excellence.
 
 
 
@@ -605,14 +599,14 @@
 
             <div data-aos="zoom-in-up" data-aos-duration = "2000" class="grid grid-cols-1 md:grid-cols-3 gap-0 w-full  text-center text-red">
 
-                <div class=" md:h-[40vh] h-[250px] bg-cover text-left p-6 bg-[url('{% static './images/jnc.png' %}')] flex items-center">
+                <div class=" md:h-[40vh] h-[250px] bg-cover text-left p-6 bg-[url('{% static './images/jnc1.png' %}')] flex items-center">
 
                     <div class="lg:w-5/6 md:w-full">
                         <h2 class="lg:text-2xl md:text-xl text-3xl font-bold mb-2 flex items-center text-white">
                             JOURNALISM & COMMUNICATION (J&C)
                            
                         </h2>
-                        <p class="lg:text-lg md:text-md text-white text-xl  font-noto-serif">Channel your voice through writing, media production, and public speaking. This program equips students with the skills needed to excel in print, broadcast, and digital journalism.
+                        <p class="lg:text-lg md:text-sm text-white text-xl  font-noto-serif">Channel your voice through writing, media production, and public speaking. This program equips students with the skills needed to excel in print, broadcast, and digital journalism.
                         </p>
                     </div>
 
@@ -622,14 +616,14 @@
 
                
 
-                <div data-aos="zoom-in-up" data-aos-duration = "2000"  class=" md:h-[40vh] h-[250px] bg-cover text-left p-6 md:border-[#9D2235] md:border-t-4 md:border-r-4 md:border-l-4 bg-[url('{% static './images/ypas.png' %}')] flex items-center">
+                <div data-aos="zoom-in-up" data-aos-duration = "2000"  class=" md:h-[40vh] h-[250px] bg-cover text-left p-6 md:border-[#9D2235] md:border-t-4 md:border-r-4 md:border-l-4 bg-[url('{% static './images/youthperforming.png' %}')] flex items-center">
 
                     <div class="lg:w-5/6 md:w-full">
                         <h2 class="lg:text-2xl md:text-xl text-3xl font-bold mb-2 flex items-center text-white b">
                             YOUTH PERFORMING ARTS SCHOOL (YPAS)
                            
                         </h2>
-                        <p class="lg:text-lg md:text-md text-white text-xl  font-noto-serif">Step into the spotlight with our dynamic Performing Arts program, offering specialized training in theater, music, and dance. Students hone their talents and perform in professional-level productions.
+                        <p class="lg:text-lg md:text-sm text-white text-xl  font-noto-serif">Step into the spotlight with our dynamic Performing Arts program, offering specialized training in theater, music, and dance. Students hone their talents and perform in professional-level productions.
 
 
                         </p>
@@ -639,14 +633,14 @@
                 </div>
 
 
-                <div data-aos="zoom-in-up" data-aos-duration = "2000"   class="md:h-[40vh] h-[250px] bg-cover text-left p-6 bg-[url('{% static './images/va.png' %}')] flex items-center">
+                <div data-aos="zoom-in-up" data-aos-duration = "2000"   class="md:h-[40vh] h-[250px] bg-cover text-left p-6 bg-[url('{% static './images/visualart.png' %}')] flex items-center">
 
                     <div class="lg:w-5/6 md:w-full">
                         <h2 class="lg:text-2xl md:text-xl text-3xl  font-bold mb-2 flex items-center text-white">
                             VISUAL ART (VA)
                            
                         </h2>
-                        <p class="lg:text-lg md:text-md text-white  text-xl font-noto-serif">Explore your creativity and artistic expression through immersive, hands-on courses in painting, sculpture, photography, and more. A program designed for budding artists to refine their craft.
+                        <p class="lg:text-lg md:text-sm text-white  text-xl font-noto-serif">Explore your creativity and artistic expression through immersive, hands-on courses in painting, sculpture, photography, and more. A program designed for budding artists to refine their craft.
                         </p>
                     </div>
 
@@ -682,10 +676,7 @@
 
         <div data-aos="fade-in" data-aos-duration = "2000"  class="carousel flex flex-row w-full ">
             <div id="slide1" class="carousel-item relative w-full transition-transform duration-700 ease-in-out transform">
- 
- 
- 
- 
+                         
                 <div class = "w-full flex flex-col items-center  flex-wrap lg:flex-nowrap lg:flex-row lg:items-start justify-center">
  
  
@@ -893,16 +884,6 @@
             </div>
  
  
-              
- 
- 
- 
- 
- 
- 
- 
- 
- 
  
               <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                 <a  onclick="slideTo(1)" class="btn btn-circle">❮</a>
@@ -915,34 +896,99 @@
    
           </div>
  
- 
- 
- 
-         
- 
- 
-       
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-       
- 
- 
- 
- 
         </div>
  
  
- 
- 
+    </section> 
 
+    {% comment %} Student Life  {% endcomment %}
+    <section id = "studentlife">
+
+        <div data-aos="zoom-in-up" data-aos-duration = "2000"  class = " w-5/6 md:w-full md:px-5 flex flex-center flex-col" style = "margin: 20px auto; "> 
+            <h1 class = "m-auto md:w-2/3 text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Student <span class = "text-[#9D2235] font-bolder italic " >Activities</span></h1>
+            <p class = " mt-5  md:w-3/6 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">From clubs to sports, Dupont Manual offers countless activities to enrich student life and foster community."            </p>
+            <button class = " red-arrow-box m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
+        </div> 
+
+
+       
+
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 w-[90%] mx-auto my-10 " >
+            <div class="grid gap-4 " >
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/sportsoccergirl.JPG" %}" alt="">
+                </div>
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/mrgarret.JPG" %}" alt="">
+                </div>
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="lg:h-[400px] h-[200px] max-w-full rounded-lg" src="{% static "./images/studentlife1.JPG" %}" alt="">
+                </div>
+            </div>
+
+
+            <div class="grid gap-4">
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer" >
+                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/deca2.png" %}" alt="">
+                </div>
+
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/studentlife2.JPG" %}" alt="">
+                </div>
+
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-auto max-w-full rounded-lg" src="{% static "./images/studentlifecarnival.jpg" %}" alt="">
+                </div>
+
+
+            </div>
+            <div class="grid gap-4">
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/neongreen1.JPG" %}" alt="">
+                </div>
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/homecomingpep.JPG" %}" alt="">
+                </div>
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-auto max-w-full rounded-lg" src="{% static "./images/basketball1.JPG" %}" alt="">
+                </div>
+
+            </div>
+            <div class="grid gap-4">
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="lg:h-[400px] h-[200px] max-w-full rounded-lg" src="{% static "./images/patriotshi.webp" %}" alt="">
+                </div>
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-full max-w-full rounded-lg" src="{% static "./images/Lanisha.JPG" %}" alt="">
+                </div>
+
+                <div class = "ease-in-out duration-500 hover:scale-110 cursor-pointer">
+                    <img class="h-auto max-w-full rounded-lg" src="{% static "./images/seniorsbest.JPG" %}" alt="">
+                </div>
+
+            </div>
+        </div>
+
+
+              
+            
+
+          
+          
+
+        
+    
     </section> 
 
 
@@ -1046,7 +1092,7 @@
             <span>
                 <a target = "_blank" href="https://x.com/jahantaila" 
                    class="hover:underline hover:scale-125 transition-transform transition-colors ease-in-out duration-300">
-                   Jahan (rizzler) Taila. Class of 2025.
+                   Jahan Taila. Class of 2025.
                 </a>
             </span>
         </p>
@@ -1054,7 +1100,7 @@
             <span>
                 <a target = "_blank" href="https://x.com/yashmpathak" 
                    class="hover:underline hover:scale-125 transition-transform transition-colors ease-in-out duration-300">
-                   Yash (no rizz) Pathak. Class of 2025.
+                   Yash Pathak. Class of 2025.
                 </a>
             </span>
         </p>
